# Orion

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.cursor/rules/: Always.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250322000001_initial_schema.py  20250322000002_document_ingestion_status.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  callbacks.py  data_analyst.py  doc_analyst.py  events.py  llm.py  orchestrator.py  report_writer.py  runner.py  state.py  tools.py  web_researcher.py
backend/app/api/: responses.py
backend/app/api/v1/: admin.py  analytics.py  auth.py  documents.py  router.py  search.py  workflows.py
backend/app/core/: config.py  crypto.py  database.py  dependencies.py  embeddings.py  exceptions.py  infra_types.py  logging.py  middleware.py  principal.py  security.py  sse.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  base.py  document_source.py  organization.py  user.py  workflow.py
backend/app/pipelines/: ingestion.py
backend/app/repositories/mongo/: agent_run_repo.py
backend/app/repositories/pg/: api_key_repo.py  audit_log_repo.py  document_repo.py  org_repo.py  user_repo.py  workflow_repo.py
backend/app/repositories/qdrant/: __init__.py  vector_repo.py
backend/app/schemas/: __init__.py  admin.py  analytics.py  auth.py  common.py  document.py  search.py  workflow.py
backend/app/services/: __init__.py  admin_service.py  analytics_service.py  auth_service.py  document_service.py  search_service.py  workflow_service.py
backend/app/tasks/: celery_app.py  ingestion_tasks.py  workflow_tasks.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_placeholder.py
backend/tests/unit/: test_security.py
backend/tests/unit/agents/: test_orchestrator.py  test_tools.py
backend/tests/unit/pipelines/: test_ingestion_text.py
backend/tests/unit/repositories/: test_user_repo.py
backend/tests/unit/services/: test_auth_service.py
docs/: FREE_STACK.md
frontend/: Dockerfile  middleware.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/analytics/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/documents/: page.tsx
frontend/app/(app)/search/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/components/: theme-provider.tsx
frontend/components/layout/: header.tsx  sidebar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  skeleton.tsx
frontend/components/workflow/: agent-status.tsx  report-viewer.tsx
frontend/lib/: api.ts  sse.ts  utils.ts
frontend/lib/hooks/: use-workflows.ts
frontend/store/: auth-store.ts  workflow-store.ts
(+2 files in other folders)
