[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-backend"
version = "0.1.0"
description = "Orion enterprise intelligence platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "alembic>=1.14.0,<2.0",
    "motor>=3.6.0,<4.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "email-validator>=2.2.0,<3.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=4.0.0,<5.0",
    "PyJWT[crypto]>=2.9.0,<3.0",
    "celery[redis]>=5.4.0,<6.0",
    "redis>=5.2.0,<6.0",
    "qdrant-client>=1.12.0,<2.0",
    "langgraph>=0.2.50,<1.0",
    "langchain>=0.3.10,<1.0",
    "langchain-openai>=0.2.10,<1.0",
    "langchain-anthropic>=0.3.0,<1.0",
    "langchain-ollama>=0.2.0,<1.0",
    "langchain-community>=0.3.10,<1.0",
    "duckduckgo-search>=7.0,<8.0",
    "llama-index>=0.12.0,<1.0",
    "llama-index-vector-stores-qdrant>=0.3.0,<1.0",
    "llama-index-readers-web>=0.2.0,<1.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "httpx>=0.28.0,<1.0",
    "slowapi>=0.1.9,<1.0",
    "structlog>=24.4.0,<26.0",
    "opentelemetry-api>=1.28.0,<2.0",
    "RestrictedPython>=7.0,<8.0",
    "pymupdf>=1.24.0,<2.0",
    "sse-starlette>=2.1.0,<3.0",
    "asgiref>=3.8.0,<4.0",
    "cryptography>=43.0.0,<44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=6.0.0,<7.0",
    "httpx>=0.28.0,<1.0",
    "testcontainers[postgres]>=4.8.0,<5.0",
    "testcontainers[mongodb]>=4.8.0,<5.0",
    "ruff>=0.8.0,<1.0",
    "black>=24.10.0,<25.0",
    "mypy>=1.13.0,<2.0",
    "types-passlib>=1.7.7.20240819",
    "types-redis>=4.6.0.20241004",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"app/models/**" = ["F821"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "bson.*",
    "celery.*",
    "motor.*",
    "llama_index.*",
    "langgraph.*",
    "langchain.*",
    "RestrictedPython.*",
    "fitz",
    "bs4",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
